--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1,106 +1,128 @@
 ---
-images:
-- name: san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-- name: stalin-time-hiding-monster-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hiding-monster-statue.jpg
-- name: machine-road-machine-road-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-4.jpg
-- name: status-berlin-status-berlin-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-hot-spicy.jpg
-- name: old-door-lock-old-door-lock-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-constitution.jpg
-- name: cyber-api-description-wars-img-1910.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-1910.jpg
-- name: stories-new-68-174-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-174-800-500-0-max-0--5--1.jpg
-- name: bf-skinner-seatlle-shipping-mountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seatlle-shipping-mountain.jpg
-- name: gears-4882162452-fa3126b38d-b-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-neo-instinct.jpg
-- name: old-gas-pumps-oldgaspumps-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-color.jpg
-- name: stalin-time-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-face-eyes-open-statue.jpg
-- name: ellis-island-ellisisland-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-internet-numbers.jpg
-- name: braceros-domingo-ulloa-dark-hallway-in-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dark-hallway-in-hotel.jpg
-- name: victoria-victoria-corner-hotel-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-blue-brush.jpg
-- name: bf-skinner-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-of-liberty_35910144944_o.jpg
-- name: old-church-oldchurch-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-circuit.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colored-circuits.jpg
-- name: downtown-trucksilo.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo.jpg
-- name: supreme-court-supremecourt-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-internet-numbers.jpg
-- name: paris-paris-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-really-hot.jpg
-- name: server-racks-door-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-internet-numbers.jpg
-- name: store-on-corner-store-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-emily-carr.jpg
-- name: sand-hand-sand-hand-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-green-zuma.jpg
-- name: mistywoods-babyfoot-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-satan-red.jpg
-- name: aws-s3-stories-containership-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-blue-circuit.jpg
-- name: curtain-curtain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-clean-view.jpg
-- name: aws-s3-stories-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-copper-circuit.png
-- name: ellis-island-ellis-island-room-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-electricity.jpg
-- name: oldtrain-oldtrain-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colorful-dream.jpg
-- name: downtheline-downtheline-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-rainbow-festival.jpg
-- name: windowmountain-window-mountain-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-granite.jpg
-- name: la-muse-japanese-garden-tree.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-japanese-garden-tree.jpg
-- name: lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-- name: old-church-oldchurch-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-storm.jpg
-- name: art-museum-art-museum-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-smoking-cigarette.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crafty-painting.jpg
-- name: bf-skinner-people-eating-canal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-people-eating-canal.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-emily-carr.jpg
-- name: lincoln-memorial-lincolnmemorial-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-paper.jpg
-- name: oldsmallboat-oldsmallboat-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-yellow-paper.jpg
-- name: containership-containership-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-alberto-giacometti.jpg
-- name: aws-s3-mountainlake-mountainlake-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still.jpg
-- name: aws-s3-deserthills-deserthills-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still-600.jpg
-- name: nazi-invasion-whie-house-close-up-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-whie-house-close-up-2.jpg
-- name: catacombs-catacombs-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-cinnamon-rolls.jpg
-- name: downtown-trucksilo-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-atari-missle.jpg
-- name: old-door-lock-old-door-lock-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-far-away.jpg
-- name: miamibeach-miamibeach-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-dream.jpg
-- name: oldhouse-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colorful-blocks.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-internet-numbers.jpg
-- name: stories-cityscape-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cityscape-dali-three.jpg
+layout: post
+title: The US Narrative for December 25, 2019
+source: http://kinlane.com/2019/12/25/the-us-narrative-today/
+domain: the.us.narrative.today.kinlane.com
+stories:
+- title: City Officials Talk Going Green
+  paper: 'Press-Republican '
+  city: Plattsburgh
+  state: New York
+  domain: http://www.pressrepublican.com/
+  link: https://www.pressrepublican.com/news/local_news/city-officials-talk-going-green/article_16218559-b12d-537f-9132-6d91b2163bb6.html
+- title: Christmas Display Draws Spectators From Around The City
+  paper: 'Times-West Virginian '
+  city: Fairmont
+  state: West Virginia
+  domain: http://www.timeswv.com/
+  link: https://www.timeswv.com/news/christmas-display-draws-spectators-from-around-the-city/article_3391da44-2687-11ea-90aa-53a17e29a1cd.html
+- title: Optimists Continue Tradition Of Helping Family For Christmas
+  paper: 'The Baytown Sun '
+  city: Baytown
+  state: Texas
+  domain: http://www.baytownsun.com/
+  link: http://baytownsun.com/news/article_2065023c-2689-11ea-ac9a-fbd219a39ce7.html
+- title: See The School Bus This Grandfather Got For His Grandkids
+  paper: 'Valley News '
+  city: White River Junction
+  state: Vermont
+  domain: http://www.vnews.com/
+  link: https://www.gvnews.com/national/news/see-the-school-bus-this-grandfather-got-for-his-grandkids/video_de8384d3-4e07-5e7c-91e2-eadfb4c26abc.html
+- title: Lynch's Return Provides A Spark For Seahawks Locker Room
+  paper: 'The Hickory Daily Record '
+  city: Hickory
+  state: North Carolina
+  domain: http://www.hickoryrecord.com/
+  link: https://www.hickoryrecord.com/sports/ap/lynch-s-return-provides-a-spark-for-seahawks-locker-room/image_1d5d4ffb-4997-50b3-a2a6-768902949050.html
+- title: Gifts From The Heart
+  paper: 'Clinton Herald '
+  city: Clinton
+  state: Iowa
+  domain: http://www.clintonherald.com/
+  link: https://www.clintonherald.com/gifts-from-the-heart/article_77a466ad-ab6e-5b24-808a-88715182689b.html
+- title: Collecting Socks For A Cause
+  paper: 'Richmond Register '
+  city: Richmond
+  state: Kentucky
+  domain: http://www.richmondregister.com/
+  link: https://www.richmondregister.com/news/lifestyles/collecting-socks-for-a-cause/article_6c09b5ca-602b-511b-8e6a-17e661a441af.html
+- title: California Man Reunited With Missing Cat In Grand Island
+  paper: 'Lexington Clipper-Herald '
+  city: Lexington
+  state: Nebraska
+  domain: http://www.lexch.com/
+  link: https://lexch.com/news/state_region/california-man-reunited-with-missing-cat-in-grand-island/article_1673b352-ccb6-58b7-a5e0-1a8275d8b6ae.html
+- title: Another Christmas Card Letter
+  paper: 'San Marcos Daily Record '
+  city: San Marcos
+  state: Texas
+  domain: http://www.sanmarcosrecord.com/
+  link: https://www.sanmarcosrecord.com/opinions/another-christmas-card-letter
+- title: Christmas Is Not Secular; Neither Is Santa Claus
+  paper: 'The News Herald '
+  city: Southgate
+  state: Michigan
+  domain: http://www.thenewsherald.com/
+  link: http://www.thenewsherald.com/opinion/christmas-is-not-secular-neither-is-santa-claus/article_c5eeb5a4-2431-11ea-bb8d-a363896f2b6d.html
+- title: Natick Man Facing Drug Charges After Dead Suffolk Student Found In Home
+  paper: 'Boston Herald '
+  city: Boston
+  state: Massachusetts
+  domain: http://www.bostonherald.com/
+  link: https://www.bostonherald.com/2019/12/24/natick-man-facing-drug-charges-after-dead-suffolk-student-found-in-home/
+- title: See The School Bus This Grandfather Got For His Grandkids
+  paper: 'Watauga Democrat '
+  city: Boone
+  state: North Carolina
+  domain: http://www.wataugademocrat.com/
+  link: https://www.wataugademocrat.com/news/national/see-the-school-bus-this-grandfather-got-for-his-grandkids/video_5b4dc76f-cd6e-55f5-bceb-b105c132e3ca.html
+- title: Turkey Keeps Businessman Jailed Despite European Ruling
+  paper: 'Muscatine Journal '
+  city: Muscatine
+  state: Iowa
+  domain: http://www.muscatinejournal.com/
+  link: https://muscatinejournal.com/news/world/turkey-keeps-businessman-jailed-despite-european-ruling/article_48795590-69c4-59f4-8f09-cc334c9f56b5.html
+- title: Georgia Health Agency Warns Of Widespread Flu
+  paper: 'Tifton Gazette '
+  city: Tifton
+  state: Georgia
+  domain: http://www.tiftongazette.com/
+  link: https://www.tiftongazette.com/news/georgia-health-agency-warns-of-widespread-flu/article_349122be-2660-11ea-bb85-5322de890c7d.html
+- title: China, Japan Stocks Lower On Christmas
+  paper: 'Lincoln Journal Star '
+  city: Lincoln
+  state: Nebraska
+  domain: http://www.journalstar.com/
+  link: https://journalstar.com/news/national/china-japan-stocks-lower-on-christmas/image_f4616576-0fe0-5185-b1ac-06f660ce5b3c.html
+- title: Man Arrested In Connection To Weekend Shooting
+  paper: 'Palatka Daily News '
+  city: Palatka
+  state: Florida
+  domain: http://www.palatkadailynews.com/
+  link: https://www.palatkadailynews.com/local-obituaries/man-arrested-connection-weekend-shooting
+- title: Record Number To Travel In Tennessee, Nationwide This Holiday
+  paper: 'Memphis Flyer '
+  city: Memphis
+  state: Tennessee
+  domain: http://www.memphisflyer.com/
+  link: https://www.memphisflyer.com/NewsBlog/archives/2019/12/20/record-number-to-travel-in-tennessee-nationwide-this-holiday
+- title: Indians Lose To Dogs
+  paper: 'The South Reporter '
+  city: Holly Springs
+  state: Mississippi
+  domain: http://www.southreporter.com
+  link: https://www.southreporter.com/sports/indians-lose-%E2%80%99dogs
+- title: Meet The Santa Claus Who Doesn't Celebrate Christmas
+  paper: 'Sidney Herald-Leader '
+  city: Sidney
+  state: Montana
+  domain: http://www.sidneyherald.com/
+  link: https://www.sidneyherald.com/national/news/meet-the-santa-claus-who-doesn-t-celebrate-christmas/video_a250c8a2-7cba-5b1b-af04-52bfa73c07b0.html
+- title: Thousands Mark Christmas In West Bank Town Of Bethlehem
+  paper: 'Aspen Daily News '
+  city: Aspen
+  state: Colorado
+  domain: http://www.aspendailynews.com/
+  link: https://www.aspendailynews.com/associated_press/thousands-mark-christmas-in-west-bank-town-of-bethlehem/article_15e22525-217a-56e8-acd8-8b9745934f24.html
 ---
-
+City Officials Talk Going Green.&nbsp;Christmas Display Draws Spectators From Around The City.&nbsp;Optimists Continue Tradition Of Helping Family For Christmas.&nbsp;See The School Bus This Grandfather Got For His Grandkids.&nbsp;Lynch's Return Provides A Spark For Seahawks Locker Room.&nbsp;Gifts From The Heart.&nbsp;Collecting Socks For A Cause.&nbsp;California Man Reunited With Missing Cat In Grand Island.&nbsp;
